...
import br.com.alura.panucci.ui.theme.caveatFont
import br.com.alura.panucci.ui.uistate.HighlightsListUiState

@Composable
fun HighlightsListScreen(
    modifier: Modifier = Modifier,
    title: String = "Destaques do dia",
    onProductClick: (Product) -> Unit = {},
    onOrderClick: () -> Unit = {},
    uiState: HighlightsListUiState = HighlightsListUiState(),
) {
    val products = uiState.products
    Column(
...
            modifier
                .fillMaxSize(),
            contentPadding = PaddingValues(16.dp),
            verticalArrangement = Arrangement.spacedBy(16.dp)
        ) {
            items(products) { p ->
                HighlightProductCard(
                    product = p,
                    Modifier
                        .semantics { contentDescription = "HighlightProductCard"}
                        .clickable {
                            onProductClick(p.copy(id = "0"))
                        },
...
