...
            modifier
                .fillMaxSize(),
            contentPadding = PaddingValues(16.dp),
            verticalArrangement = Arrangement.spacedBy(16.dp)
        ) {
            items(products) { p ->
                MenuProductCard(
                    product = p,
                    Modifier
                        .semantics { contentDescription = "MenuProductCard" }
                        .clickable { onProductClick(p) }
                )
            }
...
